--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="last_name">Last Name</string>
     <string name="phone_numbers">Phone Numbers</string>
     <string name="emails">Emails</string>
-    <string name="full_name">Full Name</string>
+    <string name="person_name">Person Name</string>
     <string name="home">Home</string>
     <string name="mobile">Mobile</string>
     <string name="work">Work</string>
